--- a/.github/workflows/publish_to_gh_page.yml
+++ b/.github/workflows/publish_to_gh_page.yml
@@ -1,10 +1,10 @@
 # example GitHub workflow
 
 name: Publish resume in JSONResume format as Github Page
- 
+
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   check_run:
